--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="zUM-6D-guy" id="pKP-Sx-s8L"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="fMj-x9-529"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="fMj-x9-529">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="K4m-Nv-gvg">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="zUM-6D-guy" id="ONe-8H-HYl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o7Z-PY-UoT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
